tests/fsharp/typecheck/sigs/neg_byref_20.bsl

neg_byref_20.fs(2,2,2,21): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
