tests/fsharp/typecheck/sigs/neg_byref_20.fs
module Test
(Array.zeroCreate 10 : int byref [] );;


